test/bluejay/ill-typed/rec_dep_polymorphism.caprice
(* TEST
  include refutable;
*)


let t a b i =
  if i % 2 == 0
  then b
  else a

(* 'a and 'b alternate by call here; so can't assume 'a stays the same in recursive calls *)
let rec f (type a' b') (dependent i : int) (a : a') (b : b') : t a' b' i =
  if i == 0
  then b
  else f a' b' (i - 1) b a (* ERROR: need to flip a' and b' *)

let res = f int bool 2 0 true
